# frwk

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/: README.md
cmake/: Config.cmake  Utils.cmake  commons.cmake  config.cmake  helpers.cmake  macros.cmake  purpurina.cmake.in
cmake/modules/: Glad.cmake
docs/: CMakeLists.txt  Doxyfile  footer.html  header.html  index.hpp  style.css
examples/: CMakeLists.txt  main.cpp
examples/basic/: CMakeLists.txt
examples/basic/hello_triangle/: main.cpp
examples/basic/simple_window/: main.cpp
examples/simple_window/: main.cpp
include/ct/: config.hpp  ct.hpp  version.hpp
include/ct/config/: api_export.hpp  os.hpp  setup.hpp  types.hpp
include/ct/core/: config.hpp  export.hpp  types.hpp  version.hpp
include/ct/math/: rect.hpp  vec.hpp
include/ct/platform/: context_config.hpp  export.hpp  platform.hpp  render.hpp  render_context.hpp  render_types.hpp  render_window.hpp  window.hpp  window_handle.hpp  window_impl.hpp  window_properties.hpp  window_style.hpp
include/ct/render/: context_config.hpp  export.hpp  render.hpp  render_context.hpp  render_types.hpp  render_window.hpp
include/purpur/: purpur.hpp
include/purpur/core/: compiler_features.hpp  config.hpp  export.hpp  types.hpp  version.hpp
include/purpur/render/: export.hpp  (+2 more)
include/purpurina/: Config.hpp
purpurina/: CmakeLists.txt
purpurina/purpurina-core/: CMakeLists.txt
purpurina/purpurina-core/include/purpurina/: Config.hpp  Export.hpp  Purpurina.hpp  config.hpp  export.hpp  purpur.hpp
purpurina/purpurina-core/include/purpurina/Core/: Config.hpp  Export.hpp  Types.hpp
purpurina/purpurina-core/include/purpurina/Core/Debug/: Logger.hpp
purpurina/purpurina-core/include/purpurina/Debug/: Assert.hpp  Break.hpp  LogLevel.hpp  Logger.hpp  break.hpp  loglevel.hpp
purpurina/purpurina-core/include/purpurina/Debug/Assert/: Assert.hpp  AssertHandler.hpp  AssertionException.hpp
purpurina/purpurina-core/include/purpurina/Error/: Exception.hpp
purpurina/purpurina-core/include/purpurina/Macros/: HelperMacros.hpp
purpurina/purpurina-core/include/purpurina/debug/: logger.hpp
purpurina/purpurina-core/include/purpurina/debug/assert/: assert.hpp  assert_handler.hpp  assertion_exception.hpp
purpurina/purpurina-core/include/purpurina/error/: exception.hpp
purpurina/purpurina-core/include/purpurina/macros/: helper_macros.hpp
purpurina/purpurina-core/src/purpurina/Core/Debug/: Logger.cpp
purpurina/purpurina-core/src/purpurina/Debug/: Assert.cpp  Logger.cpp
purpurina/purpurina-core/src/purpurina/Debug/Assert/: AssertHandler.cpp  AssertionException.cpp
purpurina/purpurina-core/src/purpurina/Error/: Exception.cpp
purpurina/purpurina-core/src/purpurina/debug/: logger.cpp
purpurina/purpurina-core/src/purpurina/debug/assert/: assert_handler.cpp  assertion_exception.cpp
purpurina/purpurina-core/src/purpurina/error/: exception.cpp
purpurina/sandbox/: CMakeLists.txt
purpurina/sandbox/src/purpurina/Sandbox/: Window.hpp  main.cpp
purpurina/sandbox/src/purpurina/sandbox/: main.cpp
sandbox/: CMakeLists.txt  main.cpp
src/ct/: CMakeLists.txt
src/ct/platform/: CMakeLists.txt  context_impl.cpp  context_impl.hpp  render_context.cpp  render_window.cpp  window.cpp  window_impl.hpp  window_properties.cpp  window_style.cpp
src/ct/platform/osx/: autorelease_pool.mm  cocoa_platform.mm  cocoa_render.cpp  cocoa_window.hpp  cocoa_window.mm  cocoa_window_controller.h  ct_application.mm  ct_application_delegate.mm  ct_opengl_view.h  ct_opengl_view.mm  ct_window.mm  ct_window_delegate.h  ct_window_delegate.mm  nsgl_context.hpp  nsgl_context.mm  platform.mm
src/ct/platform/win32/: platform.cpp  wgl_context.cpp  wgl_context.hpp  win32_internal.cpp  win32_internal.hpp  win32_messaging.cpp  win32_messaging.hpp  win32_platform.cpp  win32_render.cpp  win32_window.cpp  win32_window.hpp
src/ct/platform/x11/: glx_context.cpp  glx_context.hpp  glx_lib.cpp  glx_lib.hpp  x11.cpp  x11.hpp  x11_platform.cpp  x11_render.cpp  x11_window.cpp  x11_window.hpp
src/ct/render/: CMakeLists.txt  cocoa_render.cpp  context_impl.cpp  context_impl.hpp  render_context.cpp  render_window.cpp
src/ct/render/opengl/: ct_opengl_view.mm  gl_context.cpp  nsgl_context.hpp  nsgl_context.mm  wgl_context.cpp  wgl_context.hpp  win32_internal.hpp
src/ct/render/win32/: win32_internal.cpp  win32_render.cpp
src/purpur/: CMakeLists.txt
src/purpur/core/: CMakeLists.txt
src/purpur/core/assert/: assert_handler.cpp  assertion_exception.cpp
src/purpur/core/debug/: logger.cpp
src/purpur/core/debug/assert/: assert_handler.cpp  assertion_exception.cpp
src/purpur/core/error/: exception.cpp
src/purpur/platform/: CMakeLists.txt  window.cpp  window_properties.cpp  window_style.cpp
src/purpur/platform/osx/: autorelease_pool.mm  cocoa_window.cpp  cocoa_window.mm  platform.mm  ppr_application.mm  ppr_application_delegate.mm  ppr_window.mm  ppr_window_delegate.mm
src/purpur/platform/win32/: platform.cpp  win32_messaging.cpp  win32_messaging.hpp  win32_platform.cpp  win32_window.cpp
src/purpur/render/: CMakeLists.txt  render_window.cpp
src/purpur/render/opengl/: gl_context.cpp  wgl_context.cpp
src/purpurina/: CMakeLists.txt
src/purpurina/Core/: CMakeLists.txt
src/purpurina/Core/Debug/: Logger.cpp
tests/: CMakeLists.txt  main.cpp
tests/benchmark/: CMakeLists.txt  virtual_alternatives.cpp  virtual_alternatives.test.cpp
tests/benchmark/matrix_inverse/: algorithms.hpp  main.cpp  mesa_algorithm.hpp
tests/benchmark/profiler/: profiler.hpp
tests/commons/: math_commons.hpp
tests/core/: CMakeLists.txt
tests/core/utils/: type_traits.cpp
tests/misc/: CMakeLists.txt  virtual_alternatives.cpp
tests/unit/: CMakeLists.txt
tests/unit/core/: CMakeLists.txt
tests/unit/core/utils/: type_traits.cpp  type_traits.test.cpp
tests/unit/math/: CMakeLists.txt  commons.hpp  main.cpp  mat3.test.hpp  mat4.test.hpp  rect.test.hpp  vec2.test.cpp  vec2.test.hpp  vec3.test.hpp  vec4.test.hpp
utils/: format.sh
(+104 files in other folders)
